# image-convolution

./: .clang-format  .clang-tidy  .gitignore  Analysis_of_benchmark_results.md  Analysis_of_queue_benchmark_results.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: pipeline.yml  test.yml
cmake/Modules/: AddMockedTest.cmake
scripts/: benchmark.sh  build.sh  check_format.sh  composition_benchmark.sh  perf.sh  queue_benchmark.sh  run_clang_tidy.sh  test.sh  time_benchmark.sh
src/: CMakeLists.txt  main.c
src/convolution/: filter_application.c  filter_application.h  parallel_dispatch.c  parallel_dispatch.h
src/filters/: filter.c  filter.h
src/queue_mode/: queue.c  queue.h  queue_dispatch.c  queue_dispatch.h  threads.c  threads.h
src/sequential_convolution/: filter_application.c  filter_application.h
src/utils/: args.c  args.h  utils.c  utils.h
stb_image/: stb_image_write.h
tests/: CMakeLists.txt  benchmark.py  parallel_tests.c  sequential_tests.c  test_main.c  unit_tests.c  utils_for_tests.c  utils_for_tests.h
tests/benchmarks/: comparison_of_composition.py  comparison_of_queue_mode.py  comparison_of_times.py  comparison_using_perf.py  utils.py
tests/plots/1920x1080/: benchmark_results.txt  composition_results.txt  perf_results.txt
tests/plots/2400x1590/: benchmark_results.txt  composition_results.txt  perf_results.txt
tests/plots/queue_mode_2/: benchmark_results_30MiB.txt  benchmark_results_55MiB.txt  benchmark_results_6MiB.txt
tests/plots/queue_mode_3/: benchmark_results_30MiB.txt  benchmark_results_55MiB.txt  benchmark_results_6MiB.txt
tests/plots/queue_mode_4/: benchmark_results_30MiB.txt  benchmark_results_55MiB.txt  benchmark_results_6MiB.txt
tests/plots/queue_mode_5/: benchmark_results_30MiB.txt  benchmark_results_55MiB.txt  benchmark_results_6MiB.txt
